0.9.1
- Mainly bugfixes
- New command ask_input - requests interactive input from user. Usable in both
  CLI and GUI environments.
- Snippets documentation
- GUI test suite in behave using dogtail now resides in /features

0.9.0
- Yaml DSL got a major facelift; check the documentation for more details
  on changes.
- Improved Github integration - better authentication, better return
  values of command runners, less error prone and more user friendly.
- Support for manipulating Docker containers was added to core.
- A simple mechanism for checking Yaml assistant sanity was implemented.
- Project types were introduced.
- All project dependencies are now listed explicitly in .devassistant files.
- Global variables with system (e.g. linux) and distribution (e.g. fedora)
  name and version are now globally available.
- A platform independent way of running commands as root has been introduced.
- Semantics of "in" for loops has been changed to iterate over characters;
  use "word_in" to achieve previous behaviour.
- Tons of minor bugfixes and documentation improvements.
- "crt", "mod" and "prep" got aliases "create", "modify" and "prepare" on
  command line. Users can now use whichever suits them best.

0.8.0
- DevAssistant can now install dependencies by Pacman on ArchLinux.
- Added appdata for Gnome Software Center.
- Added task assistants, whose aim is to carry out custom tasks not related
  to any project.
- Refactored commands to be more pluggable and have a defined API.
- Separated the Yaml language from assistants, which means DevAssistant is now
  usable as a library that can execute commands from passed Python structures.
- Expressions now allow complex stuff, since we have a parser now (thx sYnfo).
- GUI tweaks and improvements for better usability.
- Added --no-cache switch to turn of cache using.
- Added an option to specify additional load paths by DEVASSISTANT_PATH
  environment variable.
- Added jinja template renderer.